--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <br>
           Note that there is a <b></b>limitation of 60 people</b> on site and that the event will be <b>light-hybrid</b> (unconference + some projects).
           <br>
-          For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>. 
+          For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>.
           <br>Lunch and social event <b>are not guaranteed</b> for late registrations.</p>
 
         <div class="d-flex justify-content-center">
@@ -274,7 +274,7 @@
                 <li>10h00-11h00 - <b>Tools for data science & data analysis</b></li>
                   <ul>
                     - <b>MNE</b> by Ruggero Basanisi<br>
-                    - <b>FieldTrip</b> by Manuel Mercier<br> 
+                    - <b>FieldTrip</b> by Manuel Mercier<br>
                     - <b>FreeSurfer</b> by Guillaume Auzias<br>
                     - <b>Scikit-Learn</b> by Matthieu Gilson<br>
                   </ul>
@@ -558,7 +558,7 @@
               <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 Shell Script / Matlab Batch 75%
               </div>
-            </div>            
+            </div>
 
             <div class="progress">
               <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
@@ -649,7 +649,7 @@
               <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 Python 50%
               </div>
-            </div>            
+            </div>
 
             <div class="progress">
               <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 25%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
@@ -694,7 +694,7 @@
               <section class="collapse" id="collapse_project3">
                 Navigating in space requires to continuously updating the representation of its own position in the environment. In poorly cued environments (e.g. in darkness) this can only be done by estimating the direction and the distance in order to compute a vectorial integration of the movement (so called path-integration). In a set of studies in rats we demonstrated that the entorhinal cortex plays a fundamental role in path integration. However, how the circuit infers the running distance is yet to be known. Using a distance estimation task, we discovered that the theta oscillations of the local field potential and the firing pattern of single neurons in the entorhinal cortex correlate with the running distance estimated by the rats. But how much and how well the unitary and the field activity allow the circuit to infer about the travelled distance?
                 In the context of the BrainHack Marseille 2022, we would like to interact and collaborate with people with a good knowledge of neural decoding of EEG-LFP and/or unitary activity in order to implement proper methods to decode the estimated running distance starting from a dataset of electrophysiology recordings in behaving rats. The final goal will be to quantify the information carried by population and single units activity within the entorhinal circuit.
-                <br><a href="https://pubmed.ncbi.nlm.nih.gov/28161726/" target="_blank">Here</a> and <a href="https://pubmed.ncbi.nlm.nih.gov/30783085/" target="_blank">here</a> you’ll find some of our previous studies to have more insight about the neuroscientific framework of the project. 
+                <br><a href="https://pubmed.ncbi.nlm.nih.gov/28161726/" target="_blank">Here</a> and <a href="https://pubmed.ncbi.nlm.nih.gov/30783085/" target="_blank">here</a> you’ll find some of our previous studies to have more insight about the neuroscientific framework of the project.
                 <br>
                 <br>Goals for the BrainHack:
                 <ul>
@@ -729,7 +729,7 @@
               <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 EEG/LFP and single units 80%
               </div>
-            </div>            
+            </div>
 
             <div class="progress">
               <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
@@ -803,7 +803,7 @@
               <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 Code documentation 80%
               </div>
-            </div>            
+            </div>
 
             <div class="progress">
               <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
@@ -895,7 +895,7 @@
               <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 Engineering/Coding 30%
               </div>
-            </div>            
+            </div>
 
             <div class="progress">
               <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
@@ -972,7 +972,7 @@
               <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 Engineering/Coding 30%
               </div>
-            </div>            
+            </div>
 
             <div class="progress">
               <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
@@ -1049,7 +1049,7 @@
               <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 DWI data skills 75%
               </div>
-            </div>            
+            </div>
 
             <div class="progress">
               <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 25%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
@@ -1091,7 +1091,7 @@
           </div>
 
           <div class="col-lg-4 mt-4">
-            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
+            <div class="member memberBG4 d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="images/team/meunier.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>David Meunier</h4>
@@ -1124,7 +1124,7 @@
           </div>
 
           <div class="col-lg-4 mt-4">
-            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+            <div class="member memberBG3 d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
               <div class="pic"><img src="images/team/Melina Cordeau.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Melina Cordeau</h4>
@@ -1135,7 +1135,7 @@
           </div>
 
           <div class="col-lg-4 mt-4">
-            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+            <div class="member memberBG5 d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
               <div class="pic"><img src="images/team/DrPron.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Alexandre Pron</h4>
@@ -1162,7 +1162,7 @@
                 <img src="images/team/bg.png" class="img-fluid" alt="" title="Beau Gosse">
               </div>
               <div class="member-info">
-                <h4>Ruggero Basanisi</h4>
+                <h4><a href="https://youtu.be/nJ03KjwiIVM?t=5">Ruggero Basanisi</a></h4>
                 <span></span>
                 <p>Postdoc</p>
               </div>
@@ -1351,7 +1351,7 @@
         <li><a href="BHM_2021/BHM_2021.html" target="_blank">Brainhack Marseille 2021</a></li>
         <li><a href="BHM_2020/BHM_2020.html" target="_blank">Brainhack Marseille 2020</a></li>
         <li><a href="https://brainhack_marseille.frama.io/ref2019/" target="_blank">Brainhack Marseille 2019</a></li>
-        
+
       </div>
     </section><!-- End Previous editions Section -->
 
