--- a/index.html
+++ b/index.html
@@ -1321,7 +1321,7 @@
           </div>
 
           <div class="col-lg-6 d-flex">
-            <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=5.400928258895875%2C43.28565299537796%2C5.406185388565064%2C43.28805842684116&amp;layer=mapnik&amp;marker=43.28685572299968%2C5.403556823730469" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=43.28686&amp;mlon=5.40356#map=19/43.28686/5.40356">Afficher une carte plus grande</a></small>
+            <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=5.400928258895875%2C43.28565299537796%2C5.406185388565064%2C43.28805842684116&amp;layer=mapnik&amp;marker=43.28685572299968%2C5.403556823730469" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=43.28686&amp;mlon=5.40356#map=19/43.28686/5.40356">Display a bigger map</a></small>
           <!-- <iframe src="https://maps.google.com/maps?q=27%20Boulevard%20Jean%20Moulin&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
           </div>
 
