--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
                   <li>16h00-16h30 - <b>Introduction to Python*</b> By Julia Sprenger</li>
                   <li>16h30-17h00 - <b>Python advanced*</b> By Julia Sprenger</li>
                 </ul>
-                <b>*Python required:</b> To participate in this session bring a laptop with a Python installation and wifi access. For this follow the regular install instructions for your operating systems [here](https://conda.io/projects/conda/en/stable/user-guide/install/index.html#regular-installation). We recommend installing _Miniconda_. You should be able to open an Anaconda prompt and typing `print('hello world')` should display 'hello word' as a response. Tell us ahead of the session if you need further assistance with setting up Miniconda.
-                  The session will give an overview of the basic concepts in Python (finding your way in Python, basic data types, variables, advanced types, loops, etc...)
+                <b>*Python required:</b> To participate in this session bring a laptop with a Python installation and wifi access. For this follow the regular install instructions for your operating systems <a href="https://conda.io/projects/conda/en/stable/user-guide/install/index.html#regular-installation" target="_blank">here</a>. We recommend installing <b>Miniconda</b>. You should be able to open an Anaconda prompt and typing `print('hello world')` should display 'hello word' as a response. Tell us ahead of the session if you need further assistance with setting up Miniconda.
+                The session will give an overview of the basic concepts in Python (finding your way in Python, basic data types, variables, advanced types, loops, etc...)
               </td>
             </tr>
             <tr>
