--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
           </ol>
           <div class="carousel-inner">
 
@@ -520,6 +521,19 @@
                   <h5>PsychophyGit - a fast and flexible tool for online experiments</h5>
                 </a>
                 <p>by Hugo Ladret & Jean-Nicolas Jérémie</p>
+              </div>
+            </div>
+
+            <!-- PROJECT 12 : BH -->
+            <div class="carousel-item">
+              <a class="scrollto active" href="#project12">
+                <img class="mx-auto d-block w-50" src="images/projects/project_template.png" alt="First slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project12">
+                  <h5>Brainhack projects database</h5>
+                </a>
+                <p>by Rémi Gau</p>
               </div>
             </div>
 
@@ -1417,6 +1431,90 @@
             <div class="progress">
               <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 Psychophysics 30% 
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+    <!-- ============ End of Project11 =============== -->
+
+    <!-- ======= Project12 description bullet ======= -->
+      <a class="active" id="project12">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project_template.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>Brainhack projects database</h3>
+              <!-- </a> -->
+              <p>
+                by <a href="https://allmylinks.com/remi-gau" target="_blank">Rémi Gau</a>
+              </p>
+
+              <hr>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project12" role="button" aria-controls="collapse_project12"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project12">
+              <b>Problem</b>
+              <br>
+              The brainhack has been running for more than 10 years, yet we do not have single centralised resource to show in a fairly exhaustive manner the diversity of projects that have happened over the past decade.
+              <br>
+              Having a quick way to create reports about the success of brainhack could make significantly easier for event organizer to look for funding.
+              <br>
+              <br>
+              <b>Solution</b>
+              <br>
+              In the past few years more and more events have started listing their projects as github issues.
+              <br>
+              This now makes it easier to:
+              <ul>
+                <li>start creating a mini database of:</li>
+                  <ul>
+                    <li>brainhack events</li>
+                    <li>brainhack sites</li>
+                    <li>brainhack projects</li>
+                  </ul>
+                <li>to create an interactive dashboard to query and create visualizations of that database</li>
+              </ul>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a multimodal project, a mix of coding and non-coding skills are required:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Python 50%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                GitHub 50%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Databases / APIs / interactive dashboards 50% 
               </div>
             </div>
 
