--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="14"></li>
           </ol>
           <div class="carousel-inner">
 
@@ -562,6 +563,19 @@
                   <h5>Removing pink noise (1/f) in LFP across different electrophysiological recording systems</h5>
                 </a>
                 <p>by Laura López Galdo</p>
+              </div>
+            </div>
+
+            <!-- PROJECT 15 : Pink Noise -->
+            <div class="carousel-item">
+              <a class="scrollto active" href="#project15">
+                <img class="mx-auto d-block w-50" src="images/projects/project15.png" alt="First slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project15">
+                  <h5>Decoding the bulk signal from fiber photometry during rat behavior</h5>
+                </a>
+                <p>by Maya Williams, Mickael Degoult & Christelle Baunez</p>
               </div>
             </div>
 
@@ -1651,8 +1665,6 @@
 
               <section class="collapse" id="collapse_project14">
               <br>
-              Sulcilab is a web base application to mannually labelize sulcal graphs (outputs of BrainVISA).
-              <br>
               We will try to remove the aperiodic noise found in the spectrum of the LFP data using the fooof module (https://github.com/fooof-tools/fooof). We will parametrize our signals, the aperiodic and periodic components and make some comparison across the different frequency bands.
               <br>
               We have data from EEG human recordings, LFP monkey utah array recordings and monkey laminar intracranial recordings across different areas. We want to see the effect of pink noise in each of the different setups and try to clean the signal.
@@ -1705,7 +1717,77 @@
 
         </div>
         <hr style="height:20px">
-    <!-- ============ End of Project13 =============== -->
+    <!-- ============ End of Project14 =============== -->
+
+    <!-- ======= Project15 description bullet ======= -->
+      <a class="active" id="project15">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project15.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>Decoding the bulk signal from fiber photometry during rat behavior</h3>
+              <!-- </a> -->
+              <p>
+                by <a href="https://github.com/MayaIwilliams" target="_blank">Maya Williams</a>, Mickael Degoult & Christelle Baunez
+              </p>
+
+              <hr>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project15" role="button" aria-controls="collapse_project15"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project15">
+              <br>
+              I am collecting calcium signals from Infalimbic, Prelimbic, and Anterior cingulate projection terminals at the subthalamic nucleus (STN) using fiber photometery. The goal is to look at the signal from these regions during sucrose and cocaine self administration, to discover the role of these pathways in food vs cocaine intake. In addition, we would focus on discrete behavior during the trails ( lever pressing, reward delivery, error responses) to study the signals of these pathways during both sucrose and cocaine intake.
+              <br>
+              It will be the first time the hyperdirect pathway is studied in such detail, looking at the mulitpule cortical projection the STN and comparing their roles in food vs cocaine rewards. From perovious work in the lab, we know that STN lesions have opposite effects on cocaine and food intake, increasing food intake while decreasing cocaine intake. This study will explore the much less studies hyperdirect pathway and its role in addiction like behaviors so that the STN can be consided a target for theraputic treatment in addiction, without harming a persons natural motivations for food.
+              <br>
+              I have collected data from sucrose taking rats, and addapted an open souce code to fit my data. I next need help on further analysis, combinding results into groups, and doing statistical analysis.
+              <br>
+              Some codes I have used or wish to try:
+              <ul>
+                <li><a href="https://www.nature.com/articles/s41598-021-03626-9" target="_blank">https://www.nature.com/articles/s41598-021-03626-9</a></li>
+                <li><a href="https://pubmed.ncbi.nlm.nih.gov/31680685/" target="_blank">https://pubmed.ncbi.nlm.nih.gov/31680685/</a></li> 
+              </ul>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a multimodal project, a mix of coding and non-coding skills are required:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Matlab 80%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                TFD* 20%
+              </div>
+            </div>
+
+        </div>
+        * Teaching For Dummies
+        <hr style="height:20px">
+    <!-- ============ End of Project14 =============== -->
 
     </section>
 
