--- a/index.html
+++ b/index.html
@@ -701,19 +701,6 @@
           </div>
 
           <div class="col-lg-4 mt-4">
-            <div class="member memberBG2 d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic">
-                <img src="images/team/bg.png" class="img-fluid" alt="" title="Beau Gosse">
-              </div>
-              <div class="member-info">
-                <h4>Ruggero Basanisi</h4>
-                <span></span>
-                <p>Postdoc</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
               <div class="pic"><img src="images/team/MatGilson.JPG" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -770,11 +757,11 @@
 
           <div class="col-lg-4 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="images/team/Christelle.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="images/team/chris_zielinski.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Christelle Zielinski</h4>
                 <span></span>
-                <p>???</p>              </div>
+                <p>Data Analysis Engineer</p>              </div>
             </div>
           </div>
 
