Location and dates updates

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Brainhack Marseille</h1>
-          <h2>4 - 7 December 2023</h2>
+          <h2>4 - 6 December 2023</h2>
         </div>
         <div class="col-xl-5 col-xl-5 col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img id="mrs_bb" src="images/logo_brainhack_blanc.jpg" alt="" class="img-fluid animated">
@@ -847,7 +847,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                    <p> Some where in Marseille </p>
+                    <p> Salle Pouillon, Saint Charles campus </p>
 <!--                <p>Faculté de Médecine, 27 Boulevard Jean Moulin, 13005 Marseille</p>-->
               </div>
 
@@ -861,7 +861,8 @@
           </div>
 
           <div class="col-lg-6 d-flex">
-            <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=5.400928258895875%2C43.28565299537796%2C5.406185388565064%2C43.28805842684116&amp;layer=mapnik&amp;marker=43.28685572299968%2C5.403556823730469" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=43.28686&amp;mlon=5.40356#map=19/43.28686/5.40356">Display a bigger map</a></small>
+            <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=5.371461510658265%2C43.30214099335783%2C5.383853316307069%2C43.30695045697307&amp;layer=mapnik&amp;marker=43.304541985109076%2C5.377657413482666" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=43.30454&amp;mlon=5.37766#map=18/43.30455/5.37766">Afficher une carte plus grande</a></small>
+          <!--  <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=5.400928258895875%2C43.28565299537796%2C5.406185388565064%2C43.28805842684116&amp;layer=mapnik&amp;marker=43.28685572299968%2C5.403556823730469" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=43.28686&amp;mlon=5.40356#map=19/43.28686/5.40356">Display a bigger map</a></small> -->
           <!-- <iframe src="https://maps.google.com/maps?q=27%20Boulevard%20Jean%20Moulin&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
           </div>
 
