new colors + pics

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="images/favicon/favicon.png" rel="icon">
+  <link href="images/favicon/favicon_green.png" rel="icon">
   <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
@@ -26,7 +26,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style_orange.css" rel="stylesheet">
+  <link href="assets/css/style_green.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Arsha - v2.2.1
@@ -73,7 +73,7 @@
           <h2>4 - 6 December 2023</h2>
         </div>
         <div class="col-xl-5 col-xl-5 col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img id="mrs_bb" src="images/logo_brainhack_blanc.jpg" alt="" class="img-fluid animated">
+          <img id="mrs_bb" src="images/brainhack2023.png" alt="" class="img-fluid animated">
         </div>
       </div>
     </div>
@@ -735,7 +735,7 @@
 
           <div class="col-lg-4 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="images/team/Laurie.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="images/team/LaurieMifsud.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Laurie Mifsud</h4>
                 <span></span>
@@ -746,7 +746,7 @@
 
           <div class="col-lg-4 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="images/team/Caroline.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="images/team/cstrube_colloquelyon_2018-06.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Caroline Strube</h4>
                 <span></span>
