--- a/index.html
+++ b/index.html
@@ -178,20 +178,22 @@
           <h2>Register</h2>
         </div>
 
-        <p> Registration will open end of summer 2023.</p>
+<!--        <p> Registration will open end of summer 2023.</p> -->
 
 
 
-<!--        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Friday November the 18th .<br><b>Registration is now CLOSED.</b>-->
-<!--          <br>-->
-<!--          Note that there is a <b></b>limitation of 60 people</b> on site and that the event will be <b>light-hybrid</b> (unconference + some projects).-->
-<!--          <br>-->
-<!--          For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>.-->
-<!--          <br>Lunch and social event <b>are not guaranteed</b> for late registrations.</p>-->
+        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Wednesday November the 15th .<br>
+<!--          <b>Registration is now CLOSED.</b> -->
+          <br>
+          Note that there is a <b></b>limitation of 80 people</b> on site and that the event will be <b>light-hybrid</b> (unconference + some projects).
+          <br>
+          For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>.
+          <br>Lunch and social event <b>are not guaranteed</b> for late registrations.</p>
 
-<!--        <div class="d-flex justify-content-center">-->
-<!--          <a class="btn btn-secondary" href="https://redcap.int.univ-amu.fr/surveys/?s=LDXLWDPTMPPXWJ8F" title="Register now, and send the email!"><h4>REGISTER</h4></a>-->
-<!--        </div>-->
+        <div class="d-flex justify-content-center">
+          <!-- <a class="btn btn-secondary" href="https://redcap.int.univ-amu.fr/surveys/?s=MR7K9LRJPJ9K8TNX" title="Register now, and send the email!"><h4>REGISTER</h4></a> -->
+          <a class="btn btn-warning" href="https://redcap.int.univ-amu.fr/surveys/?s=MR7K9LRJPJ9K8TNX" title="Register now, and send the email!"><h4>REGISTER</h4></a>
+        </div>
       </div>
     </section>
 
@@ -761,7 +763,8 @@
               <div class="member-info">
                 <h4>Christelle Zielinski</h4>
                 <span></span>
-                <p>Data Analysis Engineer</p>              </div>
+                <p>Data Analysis Engineer</p>
+              </div>
             </div>
           </div>
 
